--- a/index.html
+++ b/index.html
@@ -144,6 +144,42 @@
     </div>
 
     <div class="card">
+      <h3>Secret Lair Countdown Kit: An Encyclopedia of Magic</h3>
+      <div class="gallery">
+        <img src="encyclopedia.webp" class="active" alt="Grimoire 1">
+        <img src="https://cards.scryfall.io/normal/front/0/d/0d656542-f0cd-485d-9d74-05573a2d49e4.jpg?1763460015" alt="Grimoire 2">
+        <img src="https://cards.scryfall.io/normal/front/a/6/a6382dfc-cadf-41da-ae42-0da9f98074b4.jpg?1763460033" alt="Grimoire 3">
+        <img src="https://cards.scryfall.io/normal/front/8/8/8894eed8-fc6b-4bc4-a8d0-daa628911967.jpg?1763460055" alt="Grimoire 4">
+        <img src="https://cards.scryfall.io/normal/front/4/f/4f2f0fda-592f-4420-9703-defa07ffa2dc.jpg?1763460091" alt="Grimoire 5">
+        <img src="https://cards.scryfall.io/normal/front/9/d/9d96d034-7c69-4aec-835c-233cf941db70.jpg?1763460104" alt="Grimoire 6">
+        <img src="https://cards.scryfall.io/normal/front/1/e/1e1f470f-1194-4a87-ab6e-3574f5731642.jpg?1763460118" alt="Grimoire 7">
+        <img src="https://cards.scryfall.io/normal/front/d/7/d7655424-a6c9-4c90-bc27-b4b4c3d78d12.jpg?1763460146" alt="Grimoire 8">
+        <img src="https://cards.scryfall.io/normal/front/0/2/028a52c2-d641-49a5-a93b-4c5d01e67234.jpg?1763460158" alt="Grimoire 9">
+        <img src="https://cards.scryfall.io/normal/front/d/4/d4f4ccdc-ffeb-4393-836d-f46204ad9b65.jpg?1763460168" alt="Grimoire 10">
+        <img src="https://cards.scryfall.io/normal/front/1/0/1050fea7-307b-47fb-94f4-36f5cb481b2b.jpg?1763460178" alt="Grimoire 11">
+        <img src="https://cards.scryfall.io/normal/front/8/1/8146d912-d493-4a18-a59e-75f55276c7b5.jpg?1763460191" alt="Grimoire 12">
+        <img src="https://cards.scryfall.io/normal/front/e/e/eea9251b-ca83-420f-ac5f-4fc3ea8dc190.jpg?1763460203" alt="Grimoire 13">
+        <img src="https://cards.scryfall.io/normal/front/1/4/14b4d558-11f2-46d0-8f25-d44f5e74f70c.jpg?1763460224" alt="Grimoire 14">
+        <img src="https://cards.scryfall.io/normal/front/3/e/3efbd60f-f1c0-4657-b2e4-902086b061b6.jpg?1763460237" alt="Grimoire 15">
+        <img src="https://cards.scryfall.io/normal/front/c/6/c6c0bbd8-c428-4773-bd78-974d92f0e8bc.jpg?1763460249" alt="Grimoire 16">
+        <img src="https://cards.scryfall.io/normal/front/6/8/68875b43-6839-467c-909e-52fd2212b7de.jpg?1763460271" alt="Grimoire 17">
+        <img src="https://cards.scryfall.io/normal/front/f/a/faf48a1c-e130-475a-8a45-db82bd950ab7.jpg?1763460285" alt="Grimoire 18">
+        <img src="https://cards.scryfall.io/normal/front/2/a/2ad34311-c7ef-4333-8978-f82d0dfe2836.jpg?1763460295" alt="Grimoire 19">
+        <img src="https://cards.scryfall.io/normal/front/1/9/193a5688-9e9b-48f4-9904-53134ec73c97.jpg?1763460307" alt="Grimoire 20">
+        <img src="https://cards.scryfall.io/normal/front/1/3/1308603d-169b-4e26-96aa-05c2a5b5accd.jpg?1763460328" alt="Grimoire 21">
+        <img src="https://cards.scryfall.io/normal/front/e/9/e9a213c8-f9b5-4fcb-969c-b6c574810f21.jpg?1763460367" alt="Grimoire 22">
+        <img src="https://cards.scryfall.io/normal/front/2/6/2671eaa1-e6d5-4b70-a36c-3c7765695f1b.jpg?1763460380" alt="Grimoire 23">
+        <img src="https://cards.scryfall.io/normal/front/b/6/b673bf01-aed0-4d5b-bdd2-35dc8a162dc6.jpg?1763460393" alt="Grimoire 24">
+        <img src="https://cards.scryfall.io/normal/front/9/e/9e919d80-093a-4b11-a78d-1ce2d038f8fc.jpg?1763460408" alt="Grimoire 25">
+        <img src="https://cards.scryfall.io/normal/front/f/3/f3b6a891-9206-4c7b-9331-fb652af9751f.jpg?1763460430" alt="Grimoire 26">
+        <img src="https://cards.scryfall.io/normal/front/c/9/c9a27fc2-f9d4-4645-8d50-98a2bf2db1ef.jpg?1763460444" alt="Grimoire 27">
+        <img src="https://cards.scryfall.io/normal/front/9/5/95d65164-0ce3-40cd-a647-7e7f355a5afb.jpg?1763460456" alt="Grimoire 28">
+        <button class="prev">&#10094;</button>
+        <button class="next">&#10095;</button>
+      </div>
+      <p><strong>Price: C$310</strong></p>
+    </div>
+    <div class="card">
       <h3>30th Anniversary Countdown Kit</h3>
       <div class="gallery">
         <img src="https://cards.scryfall.io/normal/front/c/5/c535f7f8-a57e-4ef1-91b4-5e3281bd4407.jpg?1682696336" class="active" alt="Countdown Kit 1">
