--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <div class="container">
 
     <div class="card">
-      <h3>Secret Lair x Final Fantasy: Game Over</h3>
+      <h3>Secret Lair x Final Fantasy: Game Over Foil</h3>
       <div class="gallery">
         <img src="https://cards.scryfall.io/normal/front/7/a/7ac9e188-ee9c-424b-8216-2f851d8165e5.jpg?1747972060" class="active" alt="Game Over 1">
         <img src="https://cards.scryfall.io/normal/front/3/3/33da3281-1cf1-41ac-841a-e01521642779.jpg?1759418941" alt="Game Over 2">
@@ -116,7 +116,7 @@
     </div>
 
     <div class="card">
-      <h3>Secret Lair x Final Fantasy: Weapons</h3>
+      <h3>Secret Lair x Final Fantasy: Weapons Foil</h3>
       <div class="gallery">
         <img src="https://cards.scryfall.io/normal/front/6/f/6f4ad71f-14e6-4b1e-9558-1400a36f27a9.jpg?1758104030" class="active" alt="Weapons 1">
         <img src="https://cards.scryfall.io/normal/front/1/1/1138ab11-ab70-44df-9691-ddee39c3ae45.jpg?1747972039" alt="Weapons 2">
@@ -130,7 +130,7 @@
     </div>
 
     <div class="card">
-      <h3>Secret Lair x Final Fantasy: Grimoire</h3>
+      <h3>Secret Lair x Final Fantasy: Grimoire Foil</h3>
       <div class="gallery">
         <img src="https://cards.scryfall.io/normal/front/9/4/944db708-6b7d-4dc0-b3c0-2ddf130e4be3.jpg?1747972021" class="active" alt="Grimoire 1">
         <img src="https://cards.scryfall.io/normal/front/4/5/45617b0f-fdac-4747-b2d3-d571b717008f.jpg?1747972018" alt="Grimoire 2">
@@ -220,7 +220,7 @@
     </div>
 
     <div class="card">
-      <h3>Secret Lair x Hatsune Miku: Electric Entourage</h3>
+      <h3>Secret Lair x Hatsune Miku: Electric Entourage Foil</h3>
       <div class="gallery">
         <img src="https://cards.scryfall.io/normal/front/a/7/a77b4416-61da-4cd5-b3f1-79238a8e2503.jpg?1759411551" class="active" alt="Electric Entourage 1">
         <img src="https://cards.scryfall.io/normal/front/9/5/95d3a061-03b4-4004-8a6c-4374513de17a.jpg?1727566980" alt="Electric Entourage 2">
@@ -235,7 +235,7 @@
     </div>
 
     <div class="card">
-      <h3>Shades Not Included</h3>
+      <h3>Shades Not Included Foil</h3>
       <div class="gallery">
         <img src="https://cards.scryfall.io/normal/front/c/7/c71446bd-08f2-41fe-ae44-db44814c8afb.jpg?1762359849" class="active" alt="Shades Not Included 1">
         <img src="https://cards.scryfall.io/normal/front/b/d/bd081bbf-8e82-405c-a522-f826fa0a6e1d.jpg?1762359837" alt="Shades Not Included 2">
@@ -249,7 +249,7 @@
     </div>
 
     <div class="card">
-      <h3>Secret Lair x Street Fighter</h3>
+      <h3>Secret Lair x Street Fighter Foil</h3>
       <div class="gallery">
         <img src="https://cards.scryfall.io/normal/front/5/5/55ecf013-130d-4cf3-b47e-54b5fb718878.jpg?1757465087" class="active" alt="Street Fighter 1">
         <img src="https://cards.scryfall.io/normal/front/d/6/d65a3a8b-ebf8-4e51-8b57-5b14e5cb7abb.jpg?1757465192" alt="Street Fighter 1">
@@ -267,7 +267,7 @@
     </div>
 
     <div class="card">
-      <h3>Pictures of the Floating World (Japanese)</h3>
+      <h3>Pictures of the Floating World (Japanese) Foil</h3>
       <div class="gallery">
         <img src="https://cards.scryfall.io/normal/front/e/9/e9b431fd-7a4b-4cba-b5cb-554d7813b1f5.jpg?1682694838" class="active" alt="Floating World 1">
         <img src="https://cards.scryfall.io/normal/front/1/c/1ce8a4de-02ea-4efd-873d-8d936d5b6893.jpg?1682693739" alt="Floating World 2">
@@ -280,7 +280,7 @@
       <p><strong>Price: C$50</strong></p>
     </div>
     <div class="card">
-  <h3>Showcase: Neon Dynasty (Neon Ink)</h3>
+  <h3>Showcase: Neon Dynasty (Neon Ink) Foil</h3>
   <div class="gallery">
     <img src="https://cards.scryfall.io/normal/front/1/a/1a43d9e8-3320-4873-b322-b323c792ce5e.jpg?1682690874" class="active" alt="Neon Ink 1">
     <img src="https://cards.scryfall.io/normal/front/d/b/db826546-6a96-4272-b72f-d1d2be78b318.jpg?1682690817" alt="Neon Ink 2">
@@ -293,7 +293,7 @@
 </div>
 
 <div class="card">
-  <h3>Special Guest: Yuko Shimizu</h3>
+  <h3>Special Guest: Yuko Shimizu Foil</h3>
   <div class="gallery">
     <img src="https://cards.scryfall.io/normal/front/f/b/fb2c8052-f995-4a8a-b63c-dbe2e8a22498.jpg?1682691107" class="active" alt="Yuko Shimizu 1">
     <img src="https://cards.scryfall.io/normal/front/e/0/e0e26f6c-44e9-4d6f-8eb1-efdef8d04ff5.jpg?1682692144" alt="Yuko Shimizu 2">
@@ -306,7 +306,7 @@
 </div>
 
 <div class="card">
-  <h3>Introducing: Kaito Shizuki</h3>
+  <h3>Introducing: Kaito Shizuki Foil</h3>
   <div class="gallery">
     <img src="https://cards.scryfall.io/normal/front/d/3/d33ff8fc-b2b7-4cd9-8724-b926459b519d.jpg?1711892780" class="active" alt="Kaito Shizuki 1">
     <img src="https://cards.scryfall.io/normal/front/e/b/eb0cb4bc-c2de-4d4a-8daa-df68350239a9.jpg?1711892761" alt="Kaito Shizuki 2">
@@ -320,7 +320,7 @@
 </div>
 
 <div class="card">
-  <h3>Kamigawa: The Manga: The Cards</h3>
+  <h3>Kamigawa: The Manga: The Cards Foil</h3>
   <div class="gallery">
     <img src="https://cards.scryfall.io/normal/front/d/0/d0ccb445-53dc-40d7-abea-d6d8dff60ce4.jpg?1675604922" class="active" alt="Kamigawa Manga 1">
     <img src="https://cards.scryfall.io/normal/front/a/0/a004dc79-3857-4663-930c-59b2240e84bc.jpg?1675604924" alt="Kamigawa Manga 2">
@@ -334,7 +334,7 @@
 </div>
 
 <div class="card">
-  <h3>Secret Lair x Tomb Raider</h3>
+  <h3>Secret Lair x Tomb Raider Foil</h3>
   <div class="gallery">
     <img src="https://cards.scryfall.io/normal/front/0/9/098c976b-6096-4ac7-8d52-2f219ae21d1f.jpg?1706570525" class="active" alt="Tomb Raider 1">
     <img src="https://cards.scryfall.io/normal/front/6/1/6168edd9-0e1b-4ff9-b1c4-18d56866858a.jpg?1759415024" alt="Tomb Raider 2">
@@ -351,7 +351,7 @@
 </div>
 
 <div class="card">
-  <h3>Totally Spaced Out (Galaxy Foil)</h3>
+  <h3>Totally Spaced Out (Galaxy) Foil</h3>
   <div class="gallery">
     <img src="https://cards.scryfall.io/normal/front/7/a/7a28aa07-8b36-4048-9b71-dcb34b96068a.jpg?1674337729" class="active" alt="Galaxy Foil 1">
     <img src="https://cards.scryfall.io/normal/front/2/1/214ed19f-65c4-4459-9bb9-65156a62e84d.jpg?1674337718" alt="Galaxy Foil 2">
@@ -364,7 +364,7 @@
 </div>
 
 <div class="card">
-  <h3>Artist Series: Livia Prima</h3>
+  <h3>Artist Series: Livia Prima Foil</h3>
   <div class="gallery">
     <img src="https://cards.scryfall.io/normal/front/c/f/cf75f895-3481-4c21-a85f-c819613bccc3.jpg?1655154593" class="active" alt="Livia Prima 1">
     <img src="https://cards.scryfall.io/normal/front/3/9/39059423-c4f6-4371-b530-48cdc36e513f.jpg?1664203936" alt="Livia Prima 2">
@@ -378,7 +378,7 @@
 </div>
 
 <div class="card">
-  <h3>Special Guest: Junji Ito (Etched)</h3>
+  <h3>Special Guest: Junji Ito (Etched) Foil</h3>
   <div class="gallery">
     <img src="https://cards.scryfall.io/normal/front/c/0/c0e175cb-ffea-473f-8422-53273f263016.jpg?1682690026" class="active" alt="Junji Ito 1">
     <img src="https://cards.scryfall.io/normal/front/6/0/60cb8aec-21cf-49c1-8407-e45afe377f4f.jpg?1682690524" alt="Junji Ito 2">
@@ -391,7 +391,7 @@
 </div>
 
 <div class="card">
-  <h3>Rule the Room</h3>
+  <h3>Rule the Room Foil</h3>
   <div class="gallery">
     <img src="https://cards.scryfall.io/normal/front/2/5/25e475d2-a813-43d0-aa6b-4a16e92d7375.jpg?1682712708" class="active" alt="Rule the Room 1">
     <img src="https://cards.scryfall.io/normal/front/a/4/a4ff3bdd-bfd0-4cea-9493-85632b126cf1.jpg?1682712496" alt="Rule the Room 2">
@@ -404,7 +404,7 @@
 </div>
 
 <div class="card">
-  <h3>The Space Beyond the Stars</h3>
+  <h3>The Space Beyond the Stars Foil</h3>
   <div class="gallery">
     <img src="https://cards.scryfall.io/normal/front/e/7/e75a663c-f12f-49d6-b84f-3f941049872e.jpg?1682691717" class="active" alt="Space Beyond 1">
     <img src="https://cards.scryfall.io/normal/front/8/2/8201c6c9-c7c2-405c-b61d-77e7f3a9a1ca.jpg?1682694081" alt="Space Beyond 2">
@@ -417,7 +417,7 @@
 </div>
 
 <div class="card">
-  <h3>Through the Wormhole (Galaxy Foil)</h3>
+  <h3>Through the Wormhole (Galaxy) Foil</h3>
   <div class="gallery">
     <img src="https://cards.scryfall.io/normal/front/a/1/a1218c13-3b70-419f-bf95-84b04f2479f5.jpg?1733156620" class="active" alt="Wormhole 1">
     <img src="https://cards.scryfall.io/normal/front/c/f/cf977357-e13d-4c67-ae53-397adf55131e.jpg?1733154348" alt="Wormhole 2">
@@ -432,7 +432,7 @@
 </div>
 
 <div class="card">
-  <h3>The Weirdest Pets in the Multiverse</h3>
+  <h3>The Weirdest Pets in the Multiverse Foil</h3>
   <div class="gallery">
     <img src="https://cards.scryfall.io/normal/front/d/1/d15bd831-aa75-42c1-905c-6e8cc644c7fc.jpg?1682692196" class="active" alt="Weird Pets 1">
     <img src="https://cards.scryfall.io/normal/front/a/2/a28c7fe5-bc61-4fc2-acb9-810f2e4ec682.jpg?1682694087" alt="Weird Pets 2">
@@ -446,7 +446,7 @@
 </div>
 
 <div class="card">
-  <h3>If Looks Could Kill</h3>
+  <h3>If Looks Could Kill Foil</h3>
   <div class="gallery">
     <img src="https://cards.scryfall.io/normal/front/d/9/d974a337-3139-43ff-a368-6f3d10f53646.jpg?1682689759" class="active" alt="If Looks Could Kill 1">
     <img src="https://cards.scryfall.io/normal/front/1/b/1bc8751d-0eb6-46fd-88a6-7dd5255a1077.jpg?1666049688" alt="If Looks Could Kill 2">
@@ -459,7 +459,7 @@
 </div>
 
 <div class="card">
-  <h3>Special Guest: Yoji Shinkawa</h3>
+  <h3>Special Guest: Yoji Shinkawa Foil</h3>
   <div class="gallery">
     <img src="https://cards.scryfall.io/normal/front/e/7/e7501a66-76f8-4f1d-8b4c-2a82b5f930c4.jpg?1682693140" class="active" alt="Yoji Shinkawa 1">
     <img src="https://cards.scryfall.io/normal/front/6/2/62835e03-49c8-42b8-91ba-3aa4beb5df66.jpg?1670956876" alt="Yoji Shinkawa 2">
